--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -5,19 +5,18 @@ nserver 8.8.8.8
 nscache 65536
 timeouts 1 5 30 60 180 1800 15 60
 
-users $/etc/3proxy/.proxyauth
+users "mi:CL:jp"
 
-external 45.32.59.25 
-
-internal 45.32.59.25 
+external 0.0.0.0
+internal 0.0.0.0
 
 
 dnspr
 
-auth strong cache
-flush
+auth strong
+allow mi
 
-socks -p1082 -e45.32.59.25 
+socks -p30002
 
 flush
 
