--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -5,7 +5,7 @@ nserver 8.8.8.8
 nscache 65536
 timeouts 1 5 30 60 180 1800 15 60
 
-users "mi:CL:jp"
+users $/etc/3proxy/3pauth.txt
 
 external 0.0.0.0
 internal 0.0.0.0
@@ -13,9 +13,7 @@ internal 0.0.0.0
 
 dnspr
 
-auth strong
-allow mi
-
+auth cache strong
 socks -p10001
 
 flush
